--- a/intro_to_csharp/intro_to_csharp.csproj
+++ b/intro_to_csharp/intro_to_csharp.csproj
@@ -32,6 +32,9 @@
   <ItemGroup>
     <Compile Include="Basic Calculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Book.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Empty Class.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
